# quarx

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.md
examples/: flow_2d.py  hybrid_example.py  vae_mnist.py
quarx/config/: default.py
quarx/evaluation/: metrics.py  sampling.py  visualization.py
quarx/losses/: adversarial.py  custom_grad.py  elbo.py  score_matching.py
quarx/models/: base.py  diffusion.py  flows.py  gan.py  vae.py
quarx/models/components/: attention.py  cnn.py  coupling.py  mlp.py  normalization.py
quarx/registry/: losses.py  models.py
quarx/scripts/: evaluate.py  train.py  tune.py
quarx/training/: hooks.py  loop.py  optimizer.py  schedule.py
quarx/utils/: checkpoint.py  data.py  logging.py  profiling.py  random.py
scripts/: format_code.sh  lint.sh  setup_env.sh
tests/: conftest.py  test_flows.py  test_training.py  test_utils.py  test_vae.py
